crux-mir-comp/test/symb_eval/comp/spec_struct.good
test spec_struct/3a1fbbbh::f_test[0]: ok
test spec_struct/3a1fbbbh::use_f[0]: FAILED

failures:

---- spec_struct/3a1fbbbh::use_f[0] counterexamples ----
Failure for ./lib/crucible/lib.rs:36:41: 36:58 !test/symb_eval/comp/spec_struct.rs:51:5: 51:30: error: in spec_struct/3a1fbbbh::use_f[0]
MIR assertion at test/symb_eval/comp/spec_struct.rs:51:5:
	d < 10

[Crux] Overall status: Invalid.
